# simulation_1

./: .gitignore  CMakeLists.txt  README.md  ci.yml  main  main.c
src/: main.cpp  render.cpp  render.hpp  world.cpp  world.hpp
